# projectI

./: CMakeLists.txt  Hotel Management.cbp  Hotel Management.depend  Hotel Management.layout  admin.c  booking.c  booking.h  changePrice.c  changePrice.h  checkOut.c  checkOut.h  dashboard.c  dashboard.h  delete.c  delete.h  deleteBooking.c  deleteBooking.h  hotelData.txt  loadingBar.c  loadingBar.h  login.c  login.h  main.c  newbooking.c  pricing.c  pricing.h  printBooking.c  printBooking.h  readme.md  user.c  viewBooking.c  viewBooking.h  welcomeScreen.c  welcomeScreen.h  welcomescreen.c
